// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarginlyPoolWrapper long gas cost snapshot 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 440798,
}
`;

exports[`MarginlyPoolWrapper short gas cost snapshot 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 437649,
}
`;
